fix: scrollbar

--- a/components/MediaPatners/mediapatners.module.scss
+++ b/components/MediaPatners/mediapatners.module.scss
@@ -36,10 +36,19 @@
       box-shadow: 0px 0px 12px 0px #AF947866;
     }
 
+    .buttonWrapper {
+      position: fixed;
+      z-index: 3;
+      top: 1.2rem;
+      left: 1.2rem;
+    }
+  
+
     @media screen and (max-width: 768px) {
       .scrollBarContainer {
         display: none;
       }
+      
     }
 
     a{
